plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.agradip'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'ch.qos.logback:logback-classic:1.5.17'
	implementation 'org.slf4j:slf4j-simple'

	implementation 'org.springframework.boot:spring-boot-starter-cache'

	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'

	implementation 'org.ehcache:ehcache:3.10.8:jakarta'

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.security:spring-security-core:6.4.3'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'com.zaxxer:HikariCP'
	implementation 'org.hibernate.orm:hibernate-core:6.6.8.Final'
	implementation 'org.hibernate:hibernate-community-dialects:6.1.7.Final'

	// SQLite
	implementation 'org.xerial:sqlite-jdbc:3.42.0.0'

	// MySQL / MariaDB
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// PostgreSQL
	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
	useJUnitPlatform()
}
